[AAA-513-FED] : Blue-drawer: Now has a 1/8” gap above it fixed

--- a/html-prototype/clientlibs/aaa-core/base/less/global-navigation.less
+++ b/html-prototype/clientlibs/aaa-core/base/less/global-navigation.less
@@ -1128,7 +1128,7 @@
                         font-size: 13px;
                         letter-spacing: .08em;
                         text-transform: uppercase;
-                        padding: 0px;
+                        padding:7px 0px;
                         color: @color-white;
                         transition: all 0.4s;
                         font-family: 'roboto';
